tests/ui/issues/issue-35976.unimported.stderr
error: the `wait` method cannot be invoked on a trait object
  --> $DIR/issue-35976.rs:20:9
   |
LL |         fn wait(&self) where Self: Sized;
   |                                    ----- this has a `Sized` requirement
...
LL |     arg.wait();
   |         ^^^^
   |
help: another candidate was found in the following trait, perhaps add a `use` for it:
   |
LL + use private::Future;
   |

error: aborting due to 1 previous error

